fix: adjust navbar overlap on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -18,3 +18,9 @@
     margin-top: calc(var(--sl-nav-height) - 0.5rem);
   }
 }
+
+@media (max-width: 50rem) {
+  .sidebar-pane {
+    margin-top: calc(var(--sl-nav-height) + 0.5rem);
+  }
+}
